# cppGPIO

./: CMakeLists.txt  GPIO.cpp  README.md  main.cpp
include/: GPIO.h
